data/all_generated_tests/raw_wast_tests/nop_StackCorruption_144.wast
;; 5. **Test Description**:    Position `nop` before and after a label and corresponding br instruction. Check if branching operates correctly without causing stack corruption.    **Constraint Checked**: Validates `nop` doesn't affect branching mechanics or stack state.    **Relation to Stack Corruption**: Incorrect `nop` handling could result in mismanagement of branching, leading to stack misalignment.

(assert_invalid
  (module
    (func $test-nop-branching
      block
        nop
        br 0
        nop
      end
    )
  )
  "type mismatch"
)